--- a/business/home/product/product.html
+++ b/business/home/product/product.html
@@ -16,15 +16,19 @@
 		<select ng-model="product.category_id" ng-options="x.id as x.name for x in productCategories"></select>	
 		<label for="productName">商品名称:</label>
 		<input type="text"  id="productName"  ng-model="product.name">
-		<div ng-repeat = "file in product.productPicture track by $index" 
+		<div class="pre" ng-repeat = "file in product.productPicture track by $index" 
 		id="file-doc-form-productPicture{{$index}}" class="am-container"></div>
-		 
+		<div class="cc"><div>
 		<div class="am-form-group am-form-file">
 		  <button type="button" class="am-btn am-btn-default am-btn-sm">
-			<i class="am-icon-cloud-upload"></i> 上传商品图片</button>
+			<i class="am-icon-cloud-upload"></i>选择商品图片</button>
 		  <input id="doc-form-productPicture" type="file"  name="inputFile" file-model = "product.productPicture" >
 		</div>
-		<img  ng-repeat = "file in image.files track by $index" class="am-radius" alt="140*140" ng-src="{{file}}" width="140" height="140" />
+		<button type="button" class="am-btn am-btn-success am-btn-sm" ng-click = "uploadPicture(1,'productPicture')">
+			<i class="am-icon-cloud-upload"></i> 上传</button>
+		<br>
+		<img  ng-repeat = "file in productPicture track by $index" class="am-radius" alt="140*140" ng-src="{{file.document.url}}" width="140" height="140" />
+		<br>
 		<label for="productName">商品描述:</label>
 		<input type="text"  id="productName"  ng-model="product.description">
 		<br>
@@ -46,9 +50,14 @@
 		<div class="cc"><div>
 		<div class="am-form-group am-form-file">
 		  <button type="button" class="am-btn am-btn-default am-btn-sm">
-			<i class="am-icon-cloud-upload"></i> 上传轮播图</button>
+			<i class="am-icon-cloud-upload"></i> 选择轮播图</button>
 		  <input id="doc-form-productSwiperPicture" type="file"  name="inputFile" file-model = "product.productSwiperPicture" multiple>
 		</div>
+		<button type="button" class="am-btn am-btn-success am-btn-sm" ng-click = "uploadPicture(2,'productSwiperPicture')">
+			<i class="am-icon-cloud-upload"></i> 上传</button>
+		<br>
+		<img  ng-repeat = "file in productSwiperPicture track by $index" class="am-radius" alt="140*140" ng-src="{{file.document.url}}" width="140" height="140" />
+		<br>
 		
 		<div >
 		<div class="pre" ng-repeat = "file in product.productDetailsPicture track by $index" 
@@ -57,11 +66,15 @@
 		<div class="cc"><div>
 		<div class="am-form-group am-form-file">
 		  <button type="button" class="am-btn am-btn-default am-btn-sm">
-			<i class="am-icon-cloud-upload"></i> 上传详情图</button>
+			<i class="am-icon-cloud-upload"></i> 选择详情图</button>
 		  <input id="doc-form-productDetailsPicture" type="file"  name="inputFile" file-model = "product.productDetailsPicture" multiple >
-		</div>		
-		<p><button  class="am-btn am-btn-default" ng-click = "createProduct()">提交</button></p>
-		<img  ng-repeat = "file in image.files track by $index" class="am-radius" alt="140*140" ng-src="{{file}}" width="140" height="140" />
+		</div>	
+		<button type="button" class="am-btn am-btn-success am-btn-sm" ng-click = "uploadPicture(3,'productDetailsPicture')">
+			<i class="am-icon-cloud-upload"></i> 上传</button>
+		<br>		
+		<img  ng-repeat = "file in productDetailsPicture track by $index" class="am-radius" alt="140*140" ng-src="{{file.document.url}}" width="140" height="140" />
+		<p><button id="saveproduct" class="am-btn am-btn-primary " ng-click = "saveProduct()">提交</button></p>
+		
 	  </fieldset>
 	</form>
 	
