--- a/business/home/product/product.html
+++ b/business/home/product/product.html
@@ -24,10 +24,10 @@
 			<i class="am-icon-cloud-upload"></i>选择商品图片</button>
 		  <input id="doc-form-productPicture" type="file"  name="inputFile" file-model = "product.productPicture" >
 		</div>
-		<button type="button" class="am-btn am-btn-success am-btn-sm" ng-click = "uploadPicture(1,'productPicture')">
+		<button type="button" class="am-btn am-btn-success am-btn-sm" ng-click = "uploadPicture(2,'productPicture')">
 			<i class="am-icon-cloud-upload"></i> 上传</button>
 		<br>
-		<img  ng-repeat = "file in productPicture track by $index" class="am-radius" alt="140*140" ng-src="{{file.document.url}}" width="140" height="140" />
+		<img  ng-repeat = "file in productPicture track by $index" class="am-radius" alt="140*140" ng-src="{{serviceIP+file.document.url}}" width="140" height="140" />
 		<br>
 		<label for="productName">商品描述:</label>
 		<input type="text"  id="productName"  ng-model="product.description">
@@ -53,10 +53,10 @@
 			<i class="am-icon-cloud-upload"></i> 选择轮播图</button>
 		  <input id="doc-form-productSwiperPicture" type="file"  name="inputFile" file-model = "product.productSwiperPicture" multiple>
 		</div>
-		<button type="button" class="am-btn am-btn-success am-btn-sm" ng-click = "uploadPicture(2,'productSwiperPicture')">
+		<button type="button" class="am-btn am-btn-success am-btn-sm" ng-click = "uploadPicture(1,'productSwiperPicture')">
 			<i class="am-icon-cloud-upload"></i> 上传</button>
 		<br>
-		<img  ng-repeat = "file in productSwiperPicture track by $index" class="am-radius" alt="140*140" ng-src="{{file.document.url}}" width="140" height="140" />
+		<img  ng-repeat = "file in productSwiperPicture track by $index" class="am-radius" alt="140*140" ng-src="{{serviceIP+file.document.url}}" width="140" height="140" />
 		<br>
 		
 		<div >
@@ -72,8 +72,8 @@
 		<button type="button" class="am-btn am-btn-success am-btn-sm" ng-click = "uploadPicture(3,'productDetailsPicture')">
 			<i class="am-icon-cloud-upload"></i> 上传</button>
 		<br>		
-		<img  ng-repeat = "file in productDetailsPicture track by $index" class="am-radius" alt="140*140" ng-src="{{file.document.url}}" width="140" height="140" />
-		<p><button id="saveproduct" class="am-btn am-btn-primary " ng-click = "saveProduct()">提交</button></p>
+		<img  ng-repeat = "file in productDetailsPicture track by $index" class="am-radius" alt="140*140" ng-src="{{serviceIP+file.document.url}}" width="140" height="140" />
+		<p><button id="saveproduct" class="am-btn am-btn-primary " ng-click = "saveProduct()">保存</button></p>
 		
 	  </fieldset>
 	</form>
