--- a/business/home/productsList/productsList.html
+++ b/business/home/productsList/productsList.html
@@ -22,68 +22,27 @@
           <table class="am-table am-table-bd am-table-striped admin-content-table">
             <thead>
             <tr>
-              <th>ID</th><th>产品名称</th><th>产品描述</th><th>库存</th><th>编辑</th>
+              <th>ID</th><th>图片</th><th>产品名称</th><th>产品描述</th><th>库存</th><th>编辑</th><th>删除</th>
             </tr>
             </thead>
             <tbody>
-            <tr><td>1</td><td>John Clark</td><td><a href="#">Business management</a></td> <td><span class="am-badge am-badge-success">+20</span></td>
-              <td>
-			  <a ui-sref="product({ productId: 1 })" class="am-text-success">编辑</a>
-			
-              </td>
-            </tr>
-            <tr><td>2</td><td>风清扬</td><td><a href="#">公司LOGO设计</a> </td><td><span class="am-badge am-badge-danger">+2</span></td>
-              <td>
-                <div class="am-dropdown" data-am-dropdown>
-                  <button class="am-btn am-btn-default am-btn-xs am-dropdown-toggle" data-am-dropdown-toggle><span class="am-icon-cog"></span> <span class="am-icon-caret-down"></span></button>
-                  <ul class="am-dropdown-content">
-                    <li><a href="#">1. 编辑</a></li>
-                    <li><a href="#">2. 下载</a></li>
-                    <li><a href="#">3. 删除</a></li>
-                  </ul>
-                </div>
-              </td>
-            </tr>
-            <tr><td>3</td><td>詹姆斯</td><td><a href="#">开发一款业务数据软件</a></td><td><span class="am-badge am-badge-warning">+10</span></td>
-              <td>
-                <div class="am-dropdown" data-am-dropdown>
-                  <button class="am-btn am-btn-default am-btn-xs am-dropdown-toggle" data-am-dropdown-toggle><span class="am-icon-cog"></span> <span class="am-icon-caret-down"></span></button>
-                  <ul class="am-dropdown-content">
-                    <li><a href="#">1. 编辑</a></li>
-                    <li><a href="#">2. 下载</a></li>
-                    <li><a href="#">3. 删除</a></li>
-                  </ul>
-                </div>
-              </td>
-            </tr>
-            <tr><td>4</td><td>云适配</td><td><a href="#">适配所有网站</a></td><td><span class="am-badge am-badge-secondary">+50</span></td>
-              <td>
-                <div class="am-dropdown" data-am-dropdown>
-                  <button class="am-btn am-btn-default am-btn-xs am-dropdown-toggle" data-am-dropdown-toggle><span class="am-icon-cog"></span> <span class="am-icon-caret-down"></span></button>
-                  <ul class="am-dropdown-content">
-                    <li><a href="#">1. 编辑</a></li>
-                    <li><a href="#">2. 下载</a></li>
-                    <li><a href="#">3. 删除</a></li>
-                  </ul>
-                </div>
-              </td>
-            </tr>
-
-            <tr>
-              <td>5</td><td>呵呵呵</td>
-              <td><a href="#">基兰会获得BUFF</a></td>
-              <td><span class="am-badge">+22</span></td>
-              <td>
-                <div class="am-dropdown" data-am-dropdown>
-                  <button class="am-btn am-btn-default am-btn-xs am-dropdown-toggle" data-am-dropdown-toggle><span class="am-icon-cog"></span> <span class="am-icon-caret-down"></span></button>
-                  <ul class="am-dropdown-content">
-                    <li><a href="#">1. 编辑</a></li>
-                    <li><a href="#">2. 下载</a></li>
-                    <li><a href="#">3. 删除</a></li>
-                  </ul>
-                </div>
-              </td>
-            </tr>
+            <tr ng-repeat = "product in productList track by $index">
+			 <td>{{product.id}}</td>
+			 <td>
+			 <img  ng-repeat = "file in product.pictures[2] track by $index" class="am-radius" alt="140*140" ng-src="{{serviceIP+file.document.url}}" width="40" height="40" />
+			 </td>
+			 <td>{{product.name}}</td>
+			 <td><a href="#">{{product.description}}</a></td> 
+			 <td><span class="am-badge am-badge-success">{{product.stock}}</span></td>
+             <td>
+			  <a ui-sref="product({ productId: {{product.id}} })" class="am-text-success">编辑</a>
+             </td>
+			 <td>
+				<a class="am-icon-close" ng-click = "delProduct(product.id)">
+				删除
+				</a>
+             </td>
+            </tr>		
             </tbody>
           </table>
         </div>
