--- a/business/home/orderList/orderList.html
+++ b/business/home/orderList/orderList.html
@@ -8,83 +8,47 @@
 
   <!-- content start -->
   <div class="admin-content">
-
-	<form class="am-form">
+  	<form class="am-form am-form-inline">
 	  <fieldset>
 		<legend>订单列表</legend>
-		<div class="am-g">
+		<div class="am-form-group">
+		<select ng-model="queryObject.status" ng-options="x for (x, y) in  orderStatuTypeMap"></select>	
+		</div>
+		 <div class="am-form-group">
+			<input  class="am-form-field" placeholder="模糊搜索">
+		</div>
+		<button  ng-click="getOrders()" class="am-btn am-btn-default">查询</button>
+	</fieldset>
+	</form>
+	<div class="am-g">
         <div class="am-u-sm-12">
           <table class="am-table am-table-bd am-table-striped admin-content-table">
             <thead>
-            <tr>
-              <th>ID</th><th>用户</th><th>时间</th><th>库存</th><th>编辑</th>
+            <tr>						
+              <th>ID</th><th>订单编号</th><th>订单总额</th><th>支付总额</th>
+			  <th>状态</th><th>下单时间</th><th>操作</th>
             </tr>
             </thead>
             <tbody>
-            <tr>
-			<td>1</td><td>John Clark</td>
-			<td>Business management</td> 
-			<td><span class="am-badge am-badge-success">+20</span></td>
-            <td><a ui-sref="product" class="am-text-success">查看</a></td>
+            <tr ng-repeat = "order in orderList track by $index">
+			<td>{{order.id}}</td>
+			<td>{{order.order_number}}</td>
+			<td>{{order.total_price}}元</td> 
+			<td>{{order.pay_price}}元</td>
+			<td>{{orderStatuType[order.status]}}</td>
+			<td>{{order.updated_at.replace("T"," ").substr(0,16)}}</td>
+            <td>
+				<a ui-sref="order({ orderId: {{order.id}} })" class="am-text-success">详情</a>
+				
+				<button type="button" class="am-btn am-btn-success" ng-click = "closeOrder(order.id,order)">发货</button>
+			</td>
             </tr>
-            <tr><td>2</td><td>风清扬</td><td><a href="#">公司LOGO设计</a> </td><td><span class="am-badge am-badge-danger">+2</span></td>
-              <td>
-                <div class="am-dropdown" data-am-dropdown>
-                  <button class="am-btn am-btn-default am-btn-xs am-dropdown-toggle" data-am-dropdown-toggle><span class="am-icon-cog"></span> <span class="am-icon-caret-down"></span></button>
-                  <ul class="am-dropdown-content">
-                    <li><a href="#">1. 编辑</a></li>
-                    <li><a href="#">2. 下载</a></li>
-                    <li><a href="#">3. 删除</a></li>
-                  </ul>
-                </div>
-              </td>
-            </tr>
-            <tr><td>3</td><td>詹姆斯</td><td><a href="#">开发一款业务数据软件</a></td><td><span class="am-badge am-badge-warning">+10</span></td>
-              <td>
-                <div class="am-dropdown" data-am-dropdown>
-                  <button class="am-btn am-btn-default am-btn-xs am-dropdown-toggle" data-am-dropdown-toggle><span class="am-icon-cog"></span> <span class="am-icon-caret-down"></span></button>
-                  <ul class="am-dropdown-content">
-                    <li><a href="#">1. 编辑</a></li>
-                    <li><a href="#">2. 下载</a></li>
-                    <li><a href="#">3. 删除</a></li>
-                  </ul>
-                </div>
-              </td>
-            </tr>
-            <tr><td>4</td><td>云适配</td><td><a href="#">适配所有网站</a></td><td><span class="am-badge am-badge-secondary">+50</span></td>
-              <td>
-                <div class="am-dropdown" data-am-dropdown>
-                  <button class="am-btn am-btn-default am-btn-xs am-dropdown-toggle" data-am-dropdown-toggle><span class="am-icon-cog"></span> <span class="am-icon-caret-down"></span></button>
-                  <ul class="am-dropdown-content">
-                    <li><a href="#">1. 编辑</a></li>
-                    <li><a href="#">2. 下载</a></li>
-                    <li><a href="#">3. 删除</a></li>
-                  </ul>
-                </div>
-              </td>
-            </tr>
-
-            <tr>
-              <td>5</td><td>呵呵呵</td>
-              <td><a href="#">基兰会获得BUFF</a></td>
-              <td><span class="am-badge">+22</span></td>
-              <td>
-                <div class="am-dropdown" data-am-dropdown>
-                  <button class="am-btn am-btn-default am-btn-xs am-dropdown-toggle" data-am-dropdown-toggle><span class="am-icon-cog"></span> <span class="am-icon-caret-down"></span></button>
-                  <ul class="am-dropdown-content">
-                    <li><a href="#">1. 编辑</a></li>
-                    <li><a href="#">2. 下载</a></li>
-                    <li><a href="#">3. 删除</a></li>
-                  </ul>
-                </div>
-              </td>
-            </tr>
+            
             </tbody>
           </table>
         </div>
-      </div>
-	</fieldset>
-	</form>
+    </div>
+
 	
 	 
   </div>
