--- a/business/home/product/product.html
+++ b/business/home/product/product.html
@@ -42,7 +42,8 @@
 		<input type="text"  id="productName"  ng-model="product.real_price">
 		<label for="productName">库存:</label>
 		<input type="text"  id="productName"  ng-model="product.stock">
-		
+		<hr data-am-widget="divider" style="" class="am-divider am-divider-default" />
+		<label for="productName">轮播图:</label>
 		<div >
 		<div class="pre" ng-repeat = "file in product.productSwiperPicture track by $index" 
 		id="file-doc-form-productSwiperPicture{{$index}}" class="am-container"></div>
@@ -57,21 +58,23 @@
 			<i class="am-icon-cloud-upload"></i> 上传</button>
 		<br>
 		<img  ng-repeat = "file in productSwiperPicture track by $index" class="am-radius" alt="140*140" ng-src="{{serviceIP+file.document.url}}" width="140" height="140" />
-		<br>
 		
+		<hr data-am-widget="divider" style="" class="am-divider am-divider-default" />
+		<label for="productName">详情图:</label>
 		<div >
 		<div class="pre" ng-repeat = "file in product.productDetailsPicture track by $index" 
 		id="file-doc-form-productDetailsPicture{{$index}}" class="am-container"></div>
 		<div>
 		<div class="cc"><div>
+		<br>
 		<div class="am-form-group am-form-file">
 		  <button type="button" class="am-btn am-btn-default am-btn-sm">
 			<i class="am-icon-cloud-upload"></i> 选择详情图</button>
 		  <input id="doc-form-productDetailsPicture" type="file"  name="inputFile" file-model = "product.productDetailsPicture" multiple >
 		</div>	
 		<button type="button" class="am-btn am-btn-success am-btn-sm" ng-click = "uploadPicture(3,'productDetailsPicture')">
-			<i class="am-icon-cloud-upload"></i> 上传</button>
-		<br>		
+			<i class="am-icon-cloud-upload"></i> 上传</button>	
+		<br>			
 		<img  ng-repeat = "file in productDetailsPicture track by $index" class="am-radius" alt="140*140" ng-src="{{serviceIP+file.document.url}}" width="140" height="140" />
 		<p><button id="saveproduct" class="am-btn am-btn-primary " ng-click = "saveProduct()">保存</button></p>
 		
