--- a/business/home/orderList/orderList.html
+++ b/business/home/orderList/orderList.html
@@ -12,10 +12,19 @@
 	  <fieldset>
 		<legend>订单列表</legend>
 		<div class="am-form-group">
+		<label >状态：</label>
+		</div>
+		<div class="am-form-group">
 		<select ng-model="queryObject.status" ng-options="x for (x, y) in  orderStatuTypeMap"></select>	
 		</div>
-		 <div class="am-form-group">
-			<input  class="am-form-field" placeholder="模糊搜索">
+		<div class="am-form-group">
+		<label >支付时间起止：</label>
+		</div>
+		<div class="am-form-group">
+			<input id="timeStart" size="16" type="text"  readonly class="form-datetime am-form-field">
+		</div>
+		<div class="am-form-group">
+			<input id="timeEnd" size="16" type="text"  readonly class="form-datetime am-form-field">
 		</div>
 		<button  ng-click="getOrders()" class="am-btn am-btn-default">查询</button>
 	</fieldset>
@@ -25,22 +34,21 @@
           <table class="am-table am-table-bd am-table-striped admin-content-table">
             <thead>
             <tr>						
-              <th>ID</th><th>订单编号</th><th>订单总额</th><th>支付总额</th>
-			  <th>状态</th><th>下单时间</th><th>操作</th>
+              <th>订单编号</th><th>支付总额</th>
+			  <th>状态</th><th>支付时间</th><th>发货</th><th>查看</th>
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat = "order in orderList track by $index">
-			<td>{{order.id}}</td>
+            <tr  ng-repeat = "order in orderList track by $index">
 			<td>{{order.order_number}}</td>
-			<td>{{order.total_price}}元</td> 
 			<td>{{order.pay_price}}元</td>
 			<td>{{orderStatuType[order.status]}}</td>
-			<td>{{order.updated_at.replace("T"," ").substr(0,16)}}</td>
+			<td>{{order.payment_time.replace("T"," ").substr(0,16)}}</td>
             <td>
-				<a ui-sref="order({ orderId: {{order.id}} })" class="am-text-success">详情</a>
-				
-				<button type="button" class="am-btn am-btn-success" ng-click = "closeOrder(order.id,order)">发货</button>
+				<button type="button" class="am-btn am-btn-success" ng-click = "closeOrder(order.id,order,$event)">发货</button>
+			</td>
+			<td>
+				<a ui-sref="order({ orderId: {{order.id}} })">详情</a>
 			</td>
             </tr>
             
