--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>cms</title>
 	<meta charset = "utf-8">
 	<link rel="stylesheet" href="lib/amaze/css/amazeui.min.css">
+	<link rel="stylesheet" href="lib/amaze/css/amazeui.datetimepicker.css">
 	<link rel="stylesheet" href="lib/css/index.css"/>
 	<script type="text/javascript" src = "lib/iscroll.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
