删除无用的本地引用

--- a/business/home/product/product.html
+++ b/business/home/product/product.html
@@ -36,9 +36,9 @@
 		<label for="productName">单位:</label>
 	
 		<select ng-model="product.unit" ng-options="x.name as x.name for x in units"></select>
-		<label for="productName">商品价格:</label>
+		<label for="productName">市场价:</label>
 		<input type="text"  id="productName"  ng-model="product.price">
-		<label for="productName">真实价格:</label>
+		<label for="productName">优惠价:</label>
 		<input type="text"  id="productName"  ng-model="product.real_price">
 		<label for="productName">库存:</label>
 		<input type="text"  id="productName"  ng-model="product.stock">
