--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head >
 	<title>cms</title>
 	<meta charset = "utf-8">
-	<link rel="stylesheet" href="lib/amaze/css/amazeui.min.css">
+	<link rel="stylesheet" href="http://cdn.amazeui.org/amazeui/2.7.2/css/amazeui.min.css">
 	<link rel="stylesheet" href="lib/amaze/css/amazeui.datetimepicker.css">
 	<link rel="stylesheet" href="lib/css/index.css"/>
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
@@ -11,7 +11,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="green">
 	<meta name="apple-mobile-web-app-title" content="cms">
-	<meta name="author" content="Bound">
+	<meta name="author" content="wnagqinag">
 </head>
 <body>
 	<div class = "loading" style = "width:100%;height:100%;position:fixed;text-align: center;top: 40%;">
@@ -23,5 +23,5 @@
 
 	</div>
 </body>
-<script data-main="framework/main"  src="lib/require.js" defer async="true"></script>
+<script data-main="framework/main"  src="http://cdn.bootcss.com/require.js/2.1.22/require.min.js" defer async="true"></script>
 </html>
