--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head >
 	<title>cms</title>
 	<meta charset = "utf-8">
-	<link rel="stylesheet" href="http://cdn.amazeui.org/amazeui/2.7.2/css/amazeui.min.css">
+	<link rel="stylesheet" href="http://cdn.bootcss.com/amazeui/2.7.2/css/amazeui.min.css">
 	<link rel="stylesheet" href="lib/amaze/css/amazeui.datetimepicker.css">
 	<link rel="stylesheet" href="lib/css/index.css"/>
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
