--- a/business/home/adverts/adverts.html
+++ b/business/home/adverts/adverts.html
@@ -9,7 +9,7 @@
   <!-- content start -->
   <div class="admin-content" >
         <ul class="am-avg-sm-1 am-avg-md-4 am-margin am-padding am-text-center admin-content-list ">
-        <li><a ui-sref="advert" class="am-text-success"><span class="am-icon-btn am-icon-file-text"></span><br/>新增广告<br/>2300</a></li>
+        <li><a ui-sref="advert" class="am-text-success"><span class="am-icon-btn am-icon-plus"></span><br/>新增广告<br/>2300</a></li>
 		</ul>
 	<form class="am-form">
 	  <fieldset>
