--- a/business/home/product/product.html
+++ b/business/home/product/product.html
@@ -11,7 +11,7 @@
 	<form class="am-form">
 	  <fieldset>
 		<legend>{{title}}</legend>
-		<label for="productName">目录:</label>
+		<label >目录:</label>
 	
 		<select ng-model="product.category_id" ng-options="x.id as x.name for x in productCategories"></select>	
 		<label for="productName">商品名称:</label>
@@ -29,7 +29,7 @@
 		<br>
 		<img  ng-repeat = "file in productPicture track by $index" class="am-radius" alt="140*140" ng-src="{{serviceIP+file.document.url}}" width="140" height="140" />
 		<br>
-		<label for="productName">商品描述:</label>
+		<label >商品描述:</label>
 		<input type="text"  id="productName"  ng-model="product.description">
 		<br>
 		</fieldset>
@@ -37,15 +37,21 @@
 		<label >价格:<span class="am-icon-btn am-icon-plus" ng-click = "addPrices()"></span></label>
 	<div ng-repeat = "p in product.prices track by $index" class="am-form-inline prices">
 		<fieldset>
-			<label for="productName">市场价:</label>
+			
+			<label >市场价:</label>
 			<input type="text"    ng-model="p.price">
-			<label for="productName">优惠价:</label>
+			<label >优惠价:</label>
 			<input type="text"   ng-model="p.real_price">
-			<label for="productName">单位:</label>
+			<label >单位:</label>
 			<select ng-model="p.unit" ng-options="x.id as x.name for x in units"></select>
-			<label for="productName">是否默认:</label>
+			<label >是否默认:</label>
 			<select ng-model="p.is_default" ng-options="x.id as x.name for x in isDefalut"></select>
-
+			<label >转换数量:</label>
+			<input type="text"  ng-model="p.display_quantity">			
+			<label >转换单位:</label>
+			<select ng-model="p.display_unit" ng-options="x.id as x.name for x in units"></select>
+			
+			<label ><span class=" am-icon-minus" ng-click = "removePrices($index)"></span></label>
 	
 		</fieldset>
 		<br>
@@ -56,10 +62,10 @@
 	<form class="am-form">
 		<fieldset>
 
-		<label for="productName">库存:</label>
+		<label >库存:</label>
 		<input type="text"  id="productName"  ng-model="product.stock">
 		<hr data-am-widget="divider" style="" class="am-divider am-divider-default" />
-		<label for="productName">轮播图:</label>
+		<label >轮播图:</label>
 		<div >
 		<div class="pre" ng-repeat = "file in product.productSwiperPicture track by $index" 
 		id="file-doc-form-productSwiperPicture{{$index}}" class="am-container"></div>
@@ -76,7 +82,7 @@
 		<img  ng-repeat = "file in productSwiperPicture track by $index" class="am-radius" alt="140*140" ng-src="{{serviceIP+file.document.url}}" width="140" height="140" />
 		
 		<hr data-am-widget="divider" style="" class="am-divider am-divider-default" />
-		<label for="productName">详情图:</label>
+		<label >详情图:</label>
 		<div >
 		<div class="pre" ng-repeat = "file in product.productDetailsPicture track by $index" 
 		id="file-doc-form-productDetailsPicture{{$index}}" class="am-container"></div>
@@ -97,7 +103,23 @@
 	  </fieldset>
 	</form>
 	
-	 
+			<label >计算策略:<span class="am-icon-btn am-icon-plus" ng-click = "addCompute_strategies()"></span></label>
+	<div ng-repeat = "p in product.compute_strategies track by $index" class="am-form-inline prices">
+		<fieldset>
+			
+			<label >类型:</label>
+			<input type="text"    ng-model="p.classify">
+			<label >所需平均数量:</label>
+			<input type="text"   ng-model="p.average_quantity">
+			<label >所需单位:</label>
+			<select ng-model="p.average_unit" ng-options="x.id as x.name for x in units"></select>
+		
+			<label >备注:</label>
+			<input type="text"  ng-model="p.remark">			
+			<label ><span class=" am-icon-minus" ng-click = "removeCompute_strategies($index)"></span></label>
+		</fieldset>
+		<br>
+	</div> 
   </div>
  <!-- content end -->
 
@@ -113,15 +135,6 @@
 		<input  type="text"  ng-model="product.eat_quantity">	
 		<label >单位:</label>
 		<select ng-model="product.display_unit" ng-options="x.id as x.name for x in units"></select>
-		
-		
-					<label >转换数量:</label>
-			<input type="text"  ng-model="p.display_quantity">			
-			<label >转换单位:</label>
-			<select ng-model="p.display_unit" ng-options="x.id as x.name for x in units"></select>
-			
-			
-			,
-                "display_quantity": 2,
-                "display_unit": 1
+
+
  -->				
