--- a/business/home/timeLimit/timeLimit.html
+++ b/business/home/timeLimit/timeLimit.html
@@ -11,40 +11,24 @@
 	<form class="am-form">
 	  <fieldset>
 		<legend>{{title}}</legend>
-		<label >目录:</label>
-	
-		<select ng-model="advert.category" ng-options="x.id as x.name for x in advertCategories"></select>	
-		<label >广告名称:</label>
-		<input type="text"  id="productName"  ng-model="advert.title">
-		<div class="pre" ng-repeat = "file in picture track by $index" 
-		id="file-doc-form-productPicture{{$index}}" class="am-container"></div>
-		<div class="cc"><div>
-		<div class="am-form-group am-form-file">
-		  <button type="button" class="am-btn am-btn-default am-btn-sm">
-			<i class="am-icon-cloud-upload"></i>选择广告图片</button>
-		  <input id="doc-form-productPicture" type="file"  name="inputFile" file-model = "picture" >
-		</div>
-		<button type="button" class="am-btn am-btn-success am-btn-sm" ng-click = "uploadPicture(1,'picture')">
-			<i class="am-icon-cloud-upload"></i> 上传</button>
-		<br>
-		<img  ng-repeat = "file in advert.pictures track by $index" class="am-radius" alt="140*140" ng-src="{{serviceIP+file.document.url}}" width="140" height="140" />
-		<br>
-		<label >广告描述:</label>
-		<input type="text"  id="productName"  ng-model="advert.description">
+		
+		<label >开始时间:</label>
+		<input type="text"    class="form-datetime" ng-model="panic_buying.begin_time">		
+		<label >结束时间:</label>
+		<input type="text"  class=" form-datetime"  ng-model="panic_buying.end_time">	
+		
+
 		<br>
 		
 		<label >产品:</label>
 		
-		<select ng-model="advert.product_ids" multiple ng-options="x.id as x.name for x in productList"></select>
+		<select ng-model="panic_buying.product_ids" multiple ng-options="x.id as x.name for x in productList"></select>
 	
 		 </div>
 		
-		<label >状态:</label>
 	
-		<select ng-model="advert.status" ng-options="x.id as x.name for x in advertStatus"></select>	
 		
-		
-		<p><button id="saveproduct" class="am-btn am-btn-primary " ng-click = "saveAdvert()">保存</button></p>
+		<p><button id="saveproduct" class="am-btn am-btn-primary " ng-click = "savepanic_buying()">保存</button></p>
 		
 	  </fieldset>
 	</form>
