--- a/business/home/timeLimits/timeLimits.html
+++ b/business/home/timeLimits/timeLimits.html
@@ -9,7 +9,7 @@
   <!-- content start -->
   <div class="admin-content" >
         <ul class="am-avg-sm-1 am-avg-md-4 am-margin am-padding am-text-center admin-content-list ">
-        <li><a ui-sref="advert" class="am-text-success"><span class="am-icon-btn am-icon-plus"></span><br/>新增限时<br/>2300</a></li>
+        <li><a ui-sref="timeLimit" class="am-text-success"><span class="am-icon-btn am-icon-plus"></span><br/>新增限时<br/>2300</a></li>
 		</ul>
 	<form class="am-form">
 	  <fieldset>
@@ -19,29 +19,27 @@
           <table class="am-table am-table-bd am-table-striped admin-content-table">
             <thead>
             <tr>
-              <th>ID</th><th>图片</th><th>广告名称</th><th>广告描述</th><th>产品</th><th>编辑</th><th>删除</th>
+              <th>ID</th><th>开始时间</th><th>结束时间</th><th>产品</th><th>编辑</th><th>删除</th>
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat = "advert in advertList track by $index">
-			 <td>{{advert.id}}</td>
-			 <td>
-			  <img  ng-repeat = "file in advert.pictures track by $index" class="am-radius" alt="140*140" ng-src="{{serviceIP+file.document.url}}" width="40" height="40" />
-			 </td>
-			 <td>{{advert.title}}</td>
-			 <td><a >{{advert.description}}</a></td> 
+            <tr ng-repeat = "panic_buying in panic_buyings track by $index">
+			 <td>{{panic_buying.id}}</td>
+	
+			 <td>{{panic_buying.begin_time|DateFormat}}</td>
+			 <td><a >{{panic_buying.end_time|DateFormat}}</a></td> 
 			 <td>
 			 <ul>
 				 <li>
-					<span  ng-repeat = "p in advert.products track by $index" class="am-badge am-badge-success">{{p.name}}</span>
+					<span  ng-repeat = "p in panic_buying.products track by $index" class="am-badge am-badge-success">{{p.name}} ;</span>
 				 </li>
 			 </ul>
 			 </td>
              <td>
-			  <a ui-sref="advert({ advertId: {{advert.id}} })" class="am-text-success">编辑</a>
+			  <a ui-sref="timeLimit({ timeLimitId: {{panic_buying.id}} })" class="am-text-success">编辑</a>
              </td>
 			 <td>
-				<a class="am-icon-close" ng-click = "delAdvert(advert.id)">
+				<a class="am-icon-close" ng-click = "delpanic_buying(panic_buying.id)">
 				删除
 				</a>
              </td>
