--- a/business/home/orderList/orderList.html
+++ b/business/home/orderList/orderList.html
@@ -82,7 +82,7 @@
 				</span>
 			</td>
             <td>
-				<button ng-show="order.status==2||(order.status==1&&order.pay_away==2)" type="button" class="am-btn am-btn-success" ng-click = "closeOrder(order.id,$event)">发货</button>
+				<button ng-show="order.status==2||(order.status==1&&order.pay_away==2)" type="button" class="am-btn am-btn-success" ng-click = "closeOrder(order,$event)">发货</button>
 			</td>
 			<td>
 				<a ui-sref="order({ orderId: {{order.id}} })">详情</a>
