--- a/business/home/productsList/productsList.html
+++ b/business/home/productsList/productsList.html
@@ -11,29 +11,30 @@
         <ul class="am-avg-sm-1 am-avg-md-4 am-margin am-padding am-text-center admin-content-list ">
         <li><a ui-sref="product" class="am-text-success"><span class="am-icon-btn am-icon-plus"></span><br/>新增产品<br/>2300</a></li>
 		</ul>
+  	<form class="am-form am-form-inline">
+	  <fieldset>
+	  <div class="am-form-group">
+		<div class="am-form-group">
+		<label >目录:</label>
+		</div>
+		<div class="am-form-group">
+		<select ng-model="query.category_id" ng-options="x.id as x.name for x in productCategoriesType"></select>	
+		</div>
+		<div class="am-form-group">
+		<label >分类:</label>
+		</div>
+		<div class="am-form-group">
+		<select ng-model="query.property" ng-click="initDate()" ng-options="x.id as x.name for x in productPropertiesType"></select>	
+		</div>
+		
+
+		
+		<button  ng-click="getProductList()" class="am-btn am-btn-success">查询</button>
+		
+	</fieldset>
+	</form>		
 	<form class="am-form">
-		  <fieldset>
-			<legend>订单列表</legend>
-			<div class="am-form-group">
-			<label >状态：</label>
-			</div>
-			<div class="am-form-group">
-			<select ng-disabled="isNeedPro" ng-model="queryObject.status" ng-options="x for (x, y) in  orderStatuTypeMap"></select>	
-			</div>
-			<button  ng-click="setQueryType()" class="am-btn am-btn-{{isNeedPro?'primary':'default'}}">待处理</button>
-			<div class="am-form-group">
-			<label >创建时间起止：</label>
-			</div>
-			<div class="am-form-group">
-				<input id="timeStart" size="16" type="text"  readonly class="form-datetime am-form-field">
-			</div>
-			<div class="am-form-group">
-				<input id="timeEnd" size="16" type="text"  readonly class="form-datetime am-form-field">
-			</div>
-			
-			<button  ng-click="getOrders()" class="am-btn am-btn-success">查询</button>
-			
-		</fieldset>
+
 	  <fieldset>
 		<legend>产品列表</legend>
 		<div class="am-g">
