产品目录过滤

--- a/business/home/productsList/productsList.html
+++ b/business/home/productsList/productsList.html
@@ -18,7 +18,7 @@
 		<label >目录:</label>
 		</div>
 		<div class="am-form-group">
-		<select ng-model="query.category_id" ng-options="x.id as x.name for x in productCategoriesType"></select>	
+		<select ng-model="query.category" ng-options="x.id as x.name for x in productCategoriesType"></select>	
 		</div>
 		<div class="am-form-group">
 		<label >分类:</label>
