--- a/business/home/adverts/adverts.html
+++ b/business/home/adverts/adverts.html
@@ -19,7 +19,7 @@
           <table class="am-table am-table-bd am-table-striped admin-content-table">
             <thead>
             <tr>
-              <th>ID</th><th>图片</th><th>广告名称</th><th>广告描述</th><th>产品</th><th>编辑</th><th>删除</th>
+              <th>ID</th><th>图片</th><th>广告名称</th><th>广告描述</th><th>分类</th><th>状态</th><th>产品</th><th>编辑</th><th>删除</th>
             </tr>
             </thead>
             <tbody>
@@ -29,7 +29,9 @@
 			  <img  ng-repeat = "file in advert.pictures track by $index" class="am-radius" alt="140*140" ng-src="{{serviceIP+file.document.url}}" width="40" height="40" />
 			 </td>
 			 <td>{{advert.title}}</td>
-			 <td><a >{{advert.description}}</a></td> 
+			 <td><a >{{advert.description}}</a></td>
+			<td>{{advert.category}}</td>
+			<td>{{advert.status}}</td>
 			 <td>
 			 <ul>
 				 <li>
